2024R2_Test/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/index.md


# `MeshWorkflow`

<a id="summary"></a>

## Summary

### Enums

| Name | Description |
|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| [`CheckpointDefinitionType`](CheckpointDefinitionType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.CheckpointDefinitionType)                                  | To select the MeshWorkflow Process Entity Type.                                                                                                                                                                                                                                                              |
| [`ControlDataDefinedByType`](ControlDataDefinedByType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlDataDefinedByType)                                  | This enum is referenced in the ‘Control’ tree node and reflects the type of the definition for the control data of the specific control.                                                                                                                                                                     |
| [`ControlType`](ControlType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType)                                                                         | To select the mesh workflow control type.                                                                                                                                                                                                                                                                    |
| [`DataTransferType`](DataTransferType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.DataTransferType)                                                          | This enum is referenced in the “Output” tree node and defines how the generated Mesh Workflow data should be transferred back into Mechanical geometry part(s) together with the associated mesh.                                                                                                            |
| [`HemisphereCenterDefinitionType`](HemisphereCenterDefinitionType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereCenterDefinitionType)                | This enum is referenced in the ‘Control’ tree node and reflects the type of hemisphere center modality being configured. Based on the type of an hemisphere center modality different rules are applied which define the applicable list of modality data to be used for creating a hemispherical enclosure. |
| [`HemisphereOrientationDefinitionType`](HemisphereOrientationDefinitionType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereOrientationDefinitionType) | This enum is referenced in the ‘Control’ tree node and reflects the type of hemisphere orientation modality being configured.                                                                                                                                                                                |
| [`MaterialPointDefineByType`](MaterialPointDefineByType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointDefineByType)                               | This enum is referenced in Material Point controls. It specifies how the material point location is defined.                                                                                                                                                                                                 |
| [`MaterialPointType`](MaterialPointType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointType)                                                       | To select the MeshWorkflow Surface Scope Modality Type.                                                                                                                                                                                                                                                      |
| [`OperationType`](OperationType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OperationType)                                                                   | This enum is referenced in the “Step” tree node and reflects the type of operation being configured. Based on the type of an operation different rules are applied which define the applicable list of controls and outcomes which can be added.                                                             |
| [`OutcomeType`](OutcomeType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType)                                                                         | This enum is referenced in the “Outcome” tree node and reflects the type of outcome being configured. Based on the type of an outcome different rules are applied which define the applicable list of outcome data to be used.                                                                               |
| [`ScopeDefinedByType`](ScopeDefinedByType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType)                                                    | This enum is referenced in the ‘Control’ tree node and reflects how a scope is being defined. Based on the type of a scope definition different rules are applied which define the applicable list of scope definitions to be used.                                                                          |
| [`ScopeType`](ScopeType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType)                                                                               | To select the MeshWorkflow Process Entity Type.                                                                                                                                                                                                                                                              |
| [`SettingsType`](SettingsType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SettingsType)                                                                      | A SettingsType allows the user to add the additional specific Settings type entries to the Steps. The additional entries can be set by the user to automatically define the attributes of different operation Controls.                                                                                      |
| [`SphereCenterDefinitionType`](SphereCenterDefinitionType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SphereCenterDefinitionType)                            | This enum is referenced in the ‘Control’ tree node and reflects the type of sphere center modality being configured. Based on the type of an sphere center modality different rules are applied which define the applicable list of modality data to be used for creating a spherical enclosure.             |
| [`SurfaceMeshType`](SurfaceMeshType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SurfaceMeshType)                                                             | This enum is referenced in the ‘Control’ tree node and reflects the type of surface mesh being configured.                                                                                                                                                                                                   |
| [`VolumeMeshType`](VolumeMeshType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.VolumeMeshType)                                                                | This enum is referenced in the ‘Control’ tree node and reflects the type of volume mesh being configured.                                                                                                                                                                                                    |
| [`WorkflowType`](WorkflowType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.WorkflowType)                                                                      | This enum is referenced in the “Steps” tree node and reflects the type of workflow being configured. Based on the type of workflow different rules are applied which define the applicable order and type of operations which can be added.                                                                  |
| [`WrapperRegionType`](WrapperRegionType.md#ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.WrapperRegionType)                                                       | This enum is referenced in the ‘Control’ tree node and reflects the type of wrapper region being configured.                                                                                                                                                                                                 |

<a id="description"></a>

## Description

MeshWorkflow subpackage.

<!-- !! processed by numpydoc !! -->

